cards simulando os posts na página inicial

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <li><a href="#"><i class="fa fa-users"></i>Comunidades</a></li>
             <li><a href="#"><i class="fas fa-user"></i>Perfil</a></li>
             <li><a href="#"><i class="fas fa-ellipsis-h"></i>Mais</a></li>
-
         </ul>
         <button class="postar">Postar</button>
 
@@ -39,19 +38,91 @@
         </div>
     </nav>
 
-<div class="conteudo">
-    <div class="topo-menu">
-        <button class="tab-conteudo active">Para Você</button>
-        <button class="tab-conteudo">Seguindo</button>
-        <i class="fas fa-cog"></i>
+    <div class="conteudo">
+        <div class="topo-menu">
+            <button class="tab-conteudo active">Para Você</button>
+            <button class="tab-conteudo">Seguindo</button>
+            <i class="fas fa-cog"></i>
+        </div>
 
+        <!-- Cards dos posts -->
+        <div class="posts">
+            <div class="card-post">
+                <div class="header">
+                    <img src="./img/icone.jpg" alt="Foto de perfil">
+                    <span class="Nome-user">Usuário 1</span>
+                </div>
+                <div class="content">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi dolorum aliquid cum. Qui obcaecati unde necessitatibus, atque, perspiciatis quia a nostrum non laboriosam, aperiam itaque minus laudantium incidunt omnis at.
+                </div>
+                <div class="footer">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-comment"></i>
+                    <i class="fas fa-share"></i>
+                </div>
+            </div>
+
+            <div class="card-post">
+                <div class="header">
+                    <img src="./img/icone.jpg" alt="Foto de perfil">
+                    <span class="Nome-user">Usuário 2</span>
+                </div>
+                <div class="content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium expedita unde delectus voluptatum optio, harum ut ex maiores veritatis amet asperiores praesentium distinctio magni possimus explicabo rerum nulla suscipit alias.
+                </div>
+                <div class="footer">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-comment"></i>
+                    <i class="fas fa-share"></i>
+                </div>
+            </div>
+
+            <div class="card-post">
+                <div class="header">
+                    <img src="./img/icone.jpg" alt="Foto de perfil">
+                    <span class="Nome-user">Usuário 3</span>
+                </div>
+                <div class="content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium expedita unde delectus voluptatum optio, harum ut ex maiores veritatis amet asperiores praesentium distinctio magni possimus explicabo rerum nulla suscipit alias.
+                </div>
+                <div class="footer">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-comment"></i>
+                    <i class="fas fa-share"></i>
+                </div>
+            </div>
+
+            <div class="card-post">
+                <div class="header">
+                    <img src="./img/icone.jpg" alt="Foto de perfil">
+                    <span class="Nome-user">Usuário 3</span>
+                </div>
+                <div class="content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam non veritatis porro explicabo nesciunt voluptas quis, adipisci repellendus qui inventore, architecto eveniet facilis voluptatem vero. Error ipsum odio nihil sapiente?
+                </div>
+                <div class="footer">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-comment"></i>
+                    <i class="fas fa-share"></i>
+                </div>
+            </div>
+
+            <div class="card-post">
+                <div class="header">
+                    <img src="./img/icone.jpg" alt="Foto de perfil">
+                    <span class="Nome-user">Usuário 4</span>
+                </div>
+                <div class="content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium expedita unde delectus voluptatum optio, harum ut ex maiores veritatis amet asperiores praesentium distinctio magni possimus explicabo rerum nulla suscipit alias.
+                    <img src="./img/iconeSemFundo.png" alt="Imagem">
+                </div>
+                <div class="footer">
+                    <i class="fas fa-heart"></i>
+                    <i class="fas fa-comment"></i>
+                    <i class="fas fa-share"></i>
+                </div>
+            </div>
+        </div>
     </div>
-    <nav class="sidebar-direita">
-        <h1>teste</h1>
-    </nav>
-
-</div>
-
-
 </body>
 </html>
